# AI_Practice

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/conversation/: cursor_mdp_simulation_and_estimation_se.md  cursor_solving_mdp_with_type_i_extreme.md  python_environment_setup.md
docs/mdp/: choice_probability_validation.md
docs/opm/conversation/: opm_simulation_estimation.md  opm_solver.md
docs/other/conversation/: restruct_clean_env.md
scripts/config_mdp/: config.py
scripts/estimate_mdp/: estimate_mdp.html  estimate_mdp.qmd  estimate_mdp.quarto_ipynb
scripts/mdp/config/: config.py
scripts/mdp/estimate/: estimate_mdp.html  estimate_mdp.qmd
scripts/mdp/estimate_mdp/: estimate_mdp.qmd
scripts/mdp/simulate/: simulate_mdp.qmd
scripts/mdp/simulate_mdp/: simulate_mdp.html  simulate_mdp.qmd
scripts/mdp/solve/: solve_mdp.html  solve_mdp.qmd
scripts/mdp/solve_mdp/: solve_mdp.qmd
scripts/mdp_utils/: plotting.py
scripts/opm/config_opm/: config.py
scripts/opm/estimate_opm/: estimate_opm.html  estimate_opm.qmd
scripts/opm/solve_opm/: solve_opm.html  (+1 more)
scripts/simulate_mdp/: simulate_mdp.html  simulate_mdp.qmd
scripts/solve_mdp/: solve_mdp.html  solve_mdp.qmd
scripts/utils/: plotting.py
src/mdp/: __init__.py
src/mdp_estimator/: __init__.py  mdp_estimator.py
src/mdp_simulator/: __init__.py  mdp_simulator.py
src/mdp_solver/: README.md  __init__.py  mdp_solver.py  model.py  network.py  neural_network.py  pyproject.toml  solver.py  types.py  value_function.py
src/opm/: __init__.py
test/: conftest.py
test/mdp_estimator/: __init__.py  test_estimator.py
test/mdp_simulator/: test_simulator.py
test/mdp_solver/: test_model.py  test_network.py  test_neural_network.py  test_solver.py  test_value_function.py  test_value_iteration.py
(+36 files in other folders)
