[project]
name = "mdp-solver"
version = "0.1.0"
description = "MDP solver with Type-I Extreme Value shocks using monotonic neural networks"
readme = "README.md"
authors = [
    { name = "Hude", email = "hude@connect.ust.hk" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "torch>=2.0.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdp_solver"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (require solver, deselect with '-m \"not slow\"')",
]

